photoplaza demo/update

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.23"
-        android:textSize="24dp"
+        android:textSize="24sp"
         android:textColor="@color/colorWhite"/>
 
     <LinearLayout
@@ -102,6 +102,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.59">
+
         <Button
             android:id="@+id/btn_login"
             android:background="@drawable/selector_login"
@@ -112,8 +113,8 @@
             android:text="@string/login_account"
             android:textColor="@color/colorWhite"
             android:textSize="18sp" />
-        />
     </LinearLayout>
+
     <Button
         android:id="@+id/btn_anonymous"
         android:layout_width="200dp"
@@ -131,6 +132,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.69" />
+
     <LinearLayout
         android:layout_width="200dp"
         android:layout_height="45dp"
@@ -193,6 +195,7 @@
         android:layout_width="106dp"
         android:layout_height="44dp"
         android:gravity="center_horizontal"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.95"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -205,7 +208,6 @@
             android:layout_height="35dp"
             android:layout_gravity="center"
             android:text="ANR"
-            android:visibility="invisible"
             android:textSize="12sp"
             android:background="@drawable/selector_rounded" />
         <Button
@@ -215,7 +217,6 @@
             android:layout_gravity="center"
             android:layout_marginLeft="15dp"
             android:text="Crash"
-            android:visibility="invisible"
             android:textSize="8sp"
             android:background="@drawable/selector_rounded"/>
     </LinearLayout>
