--- a/app/src/main/res/xml/remote_config.xml
+++ b/app/src/main/res/xml/remote_config.xml
@@ -1,3 +1,4 @@
 <remoteconfig>
     <value key="welcome_slogan">分享生活，分享你</value>
+    <value key="newDownLoadLink">https://photoplaza-agc.dra.agchosting.link</value>
 </remoteconfig>
