--- a/app/src/main/res/layout/image_detail.xml
+++ b/app/src/main/res/layout/image_detail.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:weightSum="100"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <!--线性布局1-->
 
@@ -24,7 +25,7 @@
             android:layout_marginLeft="10dp"
             android:src="@mipmap/back_btn" />
 
-        <com.huawei.photoplaza.agc.viewAndAdapter.CircleImageView
+        <com.huawei.agc.photoplaza.viewAndAdapter.CircleImageView
             android:id="@+id/roundImageView"
             android:layout_width="50dp"
             android:layout_height="50dp"
@@ -101,12 +102,6 @@
         android:layout_marginTop="5dp"
         android:background="#E8E8E8"
         app:layout_constraintTop_toBottomOf="@+id/show_photo"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.49"
         tools:ignore="NotSibling">
 
         <TextView
@@ -141,12 +136,13 @@
         android:id="@+id/comment_input_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.1"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.999">
+        app:layout_constraintVertical_bias="0.98">
 
         <EditText
             android:id="@+id/comment_input"
@@ -157,8 +153,8 @@
             android:layout_weight="4"
             android:background="@drawable/comment_background"
             android:hint="@string/add_comment_hint"
-            android:textSize="12sp"
-            android:textColor="@color/colorBlack"/>
+            android:textColor="@color/colorBlack"
+            android:textSize="12sp" />
 
         <Button
             android:id="@+id/add_comment"
@@ -169,7 +165,7 @@
             android:layout_weight="1"
             android:background="@drawable/comment_background"
             android:text="@string/post_comments"
-            android:textSize="15dp"
-            android:textColor="@color/colorBlack"/>
+            android:textColor="@color/colorBlack"
+            android:textSize="15dp" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
