photoplaza demo/update

--- a/app/src/main/res/layout/password_edit_dialog.xml
+++ b/app/src/main/res/layout/password_edit_dialog.xml
@@ -8,7 +8,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:gravity="center"
-        android:text="请输入密码以确认身份"
+        android:text="@string/edit_password"
         android:textSize="18sp" />
     <View
         android:layout_width="match_parent"
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@null"
-            android:text="取消"
+            android:text="@string/cancel"
             android:textColor="#1965db"
             android:textSize="16sp" />
         <Button
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@null"
-            android:text="确定"
+            android:text="@string/comfirm"
             android:textColor="#1965db"
             android:textSize="16sp" />
     </LinearLayout>
